tdf#151462 - Search for outline node containing the current node

If the index lies within a special section, the position of the anchor of the corresponding section will used to search the node of the paragraph. This patch searches for the outline node of the found paragraph in order to find all the corresponding sub indexes.

Change-Id: I9be4bdc0768d5d0d5987d47d37e41acc5009cca8
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/141344
Tested-by: Jenkins
Reviewed-by: Andreas Heinisch <andreas.heinisch@yahoo.de>